--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ height: 300px;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: 20px;
-	width: 80%;
+	/* width: 80%; */
 	height: 90%;
 	float: left;
 	
